--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.1",
+        "@vitejs/plugin-vue": "^5.0.4",
+        "laravel-vue-pagination": "^4.1.3",
+        "vue": "^3.4.19",
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.3.0"
     }
 }
