--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "barryvdh/laravel-debugbar": "^3.9",
         "barryvdh/laravel-ide-helper": "^2.14",
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/lang": "^14.3",
         "laravel/breeze": "^1.28",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
