--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/fontawesome-free": "^6.5.1",
         "@vitejs/plugin-vue": "^5.0.4",
         "laravel-vue-pagination": "^4.1.3",
+        "sweetalert2": "^11.10.5",
         "vue": "^3.4.19",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.3.0"
